{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 27,
  "lineage": "7a3cd0d0-e36d-43ed-4522-6a2bed016944",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prac_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:039724355583:internet-gateway/igw-0ada469c91ed8b8d9",
            "id": "igw-0ada469c91ed8b8d9",
            "owner_id": "039724355583",
            "tags": {
              "Name": "prac_igw"
            },
            "tags_all": {
              "Name": "prac_igw"
            },
            "vpc_id": "vpc-0ca638b78c3d17947"
          },
          "dependencies": [
            "aws_vpc.vpc_prac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:039724355583:route-table/rtb-0b5fb5d620d9e6764",
            "id": "rtb-0b5fb5d620d9e6764",
            "owner_id": "039724355583",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_route"
            },
            "tags_all": {
              "Name": "private_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca638b78c3d17947"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_prac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:039724355583:route-table/rtb-0d5063771bb210b70",
            "id": "rtb-0d5063771bb210b70",
            "owner_id": "039724355583",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public_route"
            },
            "tags_all": {
              "Name": "public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca638b78c3d17947"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_prac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_a2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be666603d820cd6c",
            "route_table_id": "rtb-0b5fb5d620d9e6764",
            "subnet_id": "subnet-0d5e4b4e0afeb7a18"
          },
          "dependencies": [
            "aws_route_table.private_route",
            "aws_subnet.prac-sub-2",
            "aws_vpc.vpc_prac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_b2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prac-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:039724355583:subnet/subnet-0d5e4b4e0afeb7a18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5e4b4e0afeb7a18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "039724355583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prac-sub-2"
            },
            "tags_all": {
              "Name": "prac-sub-2"
            },
            "vpc_id": "vpc-0ca638b78c3d17947"
          },
          "dependencies": [
            "aws_vpc.vpc_prac"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_prac",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:039724355583:vpc/vpc-0ca638b78c3d17947",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03fea5cba338ca1ae",
            "default_route_table_id": "rtb-09453f27dff3e6b62",
            "default_security_group_id": "sg-028bf830af31d9da9",
            "dhcp_options_id": "dopt-0246d21f0d990e4a7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ca638b78c3d17947",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09453f27dff3e6b62",
            "owner_id": "039724355583",
            "tags": {
              "Name": "vpc_prac"
            },
            "tags_all": {
              "Name": "vpc_prac"
            }
          }
        }
      ]
    }
  ]
}